--- a/common/pom.xml
+++ b/common/pom.xml
@@ -9,11 +9,11 @@
 	<packaging>jar</packaging>
 
 	<name>common</name>
-	<description>工具类</description>
+	<description>Demo project for Spring Boot</description>
 
 	<parent>
-		<groupId>com.xiaoshuidi</groupId>
-		<artifactId>hardware</artifactId>
+		<groupId>com.ih2home</groupId>
+		<artifactId>narcissus</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
