--- a/server/pom.xml
+++ b/server/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.ih2home.hardware</groupId>
-	<artifactId>server</artifactId>
+	<artifactId>hardware-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
@@ -12,8 +12,8 @@
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
-		<groupId>com.xiaoshuidi</groupId>
-		<artifactId>hardware</artifactId>
+		<groupId>com.ih2home</groupId>
+		<artifactId>narcissus</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
@@ -32,7 +32,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.ih2home.hardware</groupId>
-			<artifactId>service</artifactId>
+			<artifactId>hardware-service</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
@@ -46,5 +46,5 @@
 		</plugins>
 	</build>
 
-
 </project>
+
