智能硬件管理平台controller

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.ih2home.hardware</groupId>
+	<groupId>com.ih2ome.hardware</groupId>
 	<artifactId>hardware-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
@@ -12,7 +12,7 @@
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
-		<groupId>com.ih2home</groupId>
+		<groupId>com.ih2ome</groupId>
 		<artifactId>narcissus</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
@@ -26,8 +26,8 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.ih2home.utils</groupId>
-			<artifactId>common</artifactId>
+			<groupId>com.narcissus.utils</groupId>
+			<artifactId>narcissus_common</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
