--- a/common/pom.xml
+++ b/common/pom.xml
@@ -3,16 +3,16 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.ih2home.utils</groupId>
-	<artifactId>common</artifactId>
+	<groupId>com.narcissus.utils</groupId>
+	<artifactId>narcissus_common</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>common</name>
+	<name>narcissus_common</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
-		<groupId>com.ih2home</groupId>
+		<groupId>com.ih2ome</groupId>
 		<artifactId>narcissus</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
