--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.ih2home</groupId>
+	<groupId>com.ih2ome</groupId>
 	<artifactId>narcissus</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
@@ -62,6 +62,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.8-dmr</version>
 		</dependency>
 		
 		<!--druid -->
@@ -140,6 +141,13 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>1.3.2</version>
+		</dependency>
+
+		<!-- ih2ome  -->
+		<dependency>
+			<groupId>com.ih2home</groupId>
+			<artifactId>ih2home_common</artifactId>
+			<version>0.0.1</version>
 		</dependency>
 
 
