--- a/service/pom.xml
+++ b/service/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.ih2ome.hardware</groupId>
 	<artifactId>hardware-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>service</name>
 	<description>Demo project for Spring Boot</description>
