--- a/orchid/pom.xml
+++ b/orchid/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.ih2ome.hardware</groupId>
-	<artifactId>hardware-server</artifactId>
+	<artifactId>hardware-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>server</name>
+	<name>service</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
@@ -26,16 +26,11 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.ih2ome.hardware</groupId>
-			<artifactId>hardware-service</artifactId>
+			<groupId>com.narcissus.utils</groupId>
+			<artifactId>narcissus_common</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-        <dependency>
-            <groupId>com.narcissus.utils</groupId>
-            <artifactId>narcissus_common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
+	</dependencies>
 
 	<build>
 		<plugins>
@@ -46,5 +41,5 @@
 		</plugins>
 	</build>
 
-</project>
 
+</project>
