--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: ${server.port}
+  port: 8080
 
 spring:
 
@@ -43,7 +43,7 @@ spring:
     # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
     timeBetweenEvictionRunsMillis: 60000
     # 配置一个连接在池中最小生存的时间，单位是毫秒
-    minEvictableIdleTimeMillis: 300000
+    minEvictableIdleTimeMillis: 30000
     
     validationQuery: SELECT 1 FROM DUAL
     testWhileIdle: true
