--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
 			<version>1.0.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper</artifactId>
+			<version>4.1.0</version>
+		</dependency>
+
 		<!--mysql -->
 		<dependency>
 			<groupId>mysql</groupId>
