--- a/server/src/main/resources/application-prod.yml
+++ b/server/src/main/resources/application-prod.yml
@@ -66,7 +66,7 @@ mapper:
   mappers: com.ih2ome.common.base.MyMapper
   not-empty: false
   identity: MYSQL
-#pagehelper:
+pagehelper:
   helper-dialect: mysql
   reasonable: true
   support-methods-arguments: true
