--- a/pom.xml
+++ b/pom.xml
@@ -55,14 +55,14 @@
 		<!-- MyBatis 通用 Mapper -->
 		<dependency>
 			<groupId>tk.mybatis</groupId>
-			<artifactId>mapper-spring-boot-starter</artifactId>
-			<version>1.0.0</version>
+			<artifactId>mapper</artifactId>
+			<version>3.4.5</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.github.pagehelper</groupId>
 			<artifactId>pagehelper</artifactId>
-			<version>4.1.0</version>
+			<version>5.1.2</version>
 		</dependency>
 
 		<!--mysql -->
