--- a/pom.xml
+++ b/pom.xml
@@ -151,11 +151,11 @@
 		</dependency>
 
 		<!-- ih2ome  -->
-		<dependency>
-			<groupId>com.ih2ome</groupId>
-			<artifactId>ih2ome_common</artifactId>
-			<version>0.0.6</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.ih2ome</groupId>-->
+			<!--<artifactId>ih2ome_common</artifactId>-->
+			<!--<version>0.0.6</version>-->
+		<!--</dependency>-->
 
 		<!--<dependency>-->
 			<!--<groupId>org.springframework.boot</groupId>-->
