--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<module>server</module>
 	</modules>
 	<properties>
+		<!--<start-class>com.ih2ome.hardware_server.server.ShuidiApplication</start-class>-->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
