--- a/common/pom.xml
+++ b/common/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.narcissus.utils</groupId>
-	<artifactId>narcissus_common</artifactId>
+	<artifactId>narcissus-common</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>narcissus_common</name>
+	<name>common</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
