--- a/server/pom.xml
+++ b/server/pom.xml
@@ -6,7 +6,8 @@
 	<artifactId>hardware-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<name>server</name>
+
+	<name>hardware-server</name>
 	<description>Demo project for Spring Boot</description>
 	<parent>
 		<groupId>com.ih2ome</groupId>
@@ -27,7 +28,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.narcissus.utils</groupId>
-			<artifactId>narcissus_common</artifactId>
+			<artifactId>narcissus-common</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
