--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,12 @@
 			<artifactId>commons-io</artifactId>
 			<version>1.3.2</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.ih2ome</groupId>
+			<artifactId>lotus</artifactId>
+			<version>0.1.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
