--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,12 @@
 			<version>1.3.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.ih2ome</groupId>
+			<artifactId>lotus</artifactId>
+			<version>0.1.0</version>
+		</dependency>
+
 		<!-- ih2ome  -->
 		<!--<dependency>-->
 			<!--<groupId>com.ih2ome</groupId>-->
