--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,18 @@
 			<artifactId>lotus</artifactId>
 			<version>0.1.2</version>
 		</dependency>
+
+		<!--生产配置-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<!--生产配置-->
 	</dependencies>
 
 
