--- a/server/pom.xml
+++ b/server/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.ih2ome.hardware</groupId>
 	<artifactId>hardware-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>hardware-server</name>
 	<description>Demo project for Spring Boot</description>
