--- a/server/pom.xml
+++ b/server/pom.xml
@@ -33,7 +33,28 @@
 		</dependency>
 
 	</dependencies>
+
 	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+				<excludes>
+					<exclude>application-dev.yml</exclude>
+					<exclude>application-prod.yml</exclude>
+					<exclude>application-test.yml</exclude>
+					<exclude>application.yml</exclude>
+				</excludes>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+				<includes>
+					<include>application-${proileActive}.yml</include>
+					<include>application.yml</include>
+				</includes>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
