--- a/server/src/main/resources/application-test.yml
+++ b/server/src/main/resources/application-test.yml
@@ -20,7 +20,7 @@ spring:
     url: jdbc:mysql://rds4y3ify14fg0auc3f9.mysql.rds.aliyuncs.com:3306
     username: xiaoshuidi
     password: xiaoshuidi
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
 
     ## 连接池配置
