--- a/server/src/main/resources/application-test.yml
+++ b/server/src/main/resources/application-test.yml
@@ -21,31 +21,31 @@ spring:
     username: xiaoshuidi
     password: xiaoshuidi
     driver-class-name: com.mysql.cj.jdbc.Driver
-    #type: com.alibaba.druid.pool.DruidDataSource
+    type: com.alibaba.druid.pool.DruidDataSource
 
-#    ## 连接池配置
-#    initialSize: 0
-#    minIdle: 8
-#    maxActive: 8
-#    # 超时时间
-#    maxWait: -1
-#
-#    # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
-#    timeBetweenEvictionRunsMillis: -1
-#    # 配置一个连接在池中最小生存的时间，单位是毫秒
-#    minEvictableIdleTimeMillis: 300000
-#
-#    validationQuery: SELECT 1 FROM DUAL
-#    testWhileIdle: true
-#    testOnBorrow: false
-#    testOnReturn: false
-#
-#    # 打开PSCache，并且指定每个连接上PSCache的大小
-#    poolPreparedStatements: true
-#    maxPoolPreparedStatementPerConnectionSize: 0
-#
-#    # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
-#    filters: stat,wall,log4j
-#    connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000;config.decrypt=true;config.decrypt.key=${publicKey}
+    ## 连接池配置
+    initialSize: 0
+    minIdle: 8
+    maxActive: 8
+    # 超时时间
+    maxWait: -1
+
+    # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+    timeBetweenEvictionRunsMillis: -1
+    # 配置一个连接在池中最小生存的时间，单位是毫秒
+    minEvictableIdleTimeMillis: 300000
+
+    validationQuery: SELECT 1 FROM DUAL
+    testWhileIdle: true
+    testOnBorrow: false
+    testOnReturn: false
+
+    # 打开PSCache，并且指定每个连接上PSCache的大小
+    poolPreparedStatements: true
+    maxPoolPreparedStatementPerConnectionSize: 0
+
+    # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
+    filters: stat,wall,log4j
+    connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000;config.decrypt=true;config.decrypt.key=${publicKey}
 
 
