--- a/pom.xml
+++ b/pom.xml
@@ -153,19 +153,19 @@
 		<dependency>
 			<groupId>com.ih2ome</groupId>
 			<artifactId>lotus</artifactId>
-			<version>0.1.9</version>
+			<version>0.1.10</version>
 		</dependency>
 
 		<!--生产配置-->
-		<dependency>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-web</artifactId>
-	</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
-		</dependency>
+		<!--<dependency>-->
+		<!--<groupId>org.springframework.boot</groupId>-->
+		<!--<artifactId>spring-boot-starter-web</artifactId>-->
+	<!--</dependency>-->
+		<!--<dependency>-->
+			<!--<groupId>org.springframework.boot</groupId>-->
+			<!--<artifactId>spring-boot-starter-tomcat</artifactId>-->
+			<!--<scope>provided</scope>-->
+		<!--</dependency>-->
 		<!--生产配置-->
 	</dependencies>
 	<profiles>
