--- a/server/pom.xml
+++ b/server/pom.xml
@@ -50,7 +50,7 @@
 				<directory>src/main/resources</directory>
 				<filtering>true</filtering>
 				<includes>
-					<include>application-${proileActive}.yml</include>
+					<include>application-${profileActive}.yml</include>
 					<include>application.yml</include>
 				</includes>
 			</resource>
