--- a/pom.xml
+++ b/pom.xml
@@ -164,11 +164,11 @@
         <dependency>
             <groupId>com.ih2ome</groupId>
             <artifactId>lotus</artifactId>
-            <version>0.1.6</version>
+            <version>0.1.8</version>
         </dependency>
 
         <!--生产配置-->
-       <!-- <dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
@@ -176,7 +176,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
             <scope>provided</scope>
-        </dependency>-->
+        </dependency>
         <!--生产配置-->
     </dependencies>
     <profiles>
