--- a/server/src/main/resources/application-dev.yml
+++ b/server/src/main/resources/application-dev.yml
@@ -1,11 +1,11 @@
 server:
-  port: 80
+  port: 8080
 spring:
   ##redis配置
   profiles: dev
   redis:
     database: 0
-    host: 10.0.0.20
+    host: 10.0.0.24
     port: 6379
     password:
     pool:
@@ -17,7 +17,7 @@ spring:
   
   ## 数据库访问配置
   datasource:
-    url: jdbc:mysql://10.0.0.20:3306
+    url: jdbc:mysql://10.0.0.20:3306?useSSL=false
     username: root
     password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -50,4 +50,7 @@ spring:
 #短信配置
 sms:
   baseUrl: http://localhost:5312
+#sso基础信息配置
+sso:
+  host: http://10.0.0.230:8080
 
