--- a/server/src/main/resources/application-test.yml
+++ b/server/src/main/resources/application-test.yml
@@ -52,5 +52,5 @@ sms:
   baseUrl: http://10.0.9.203:5312
 #基础信息配置
 sso:
-  host: http://narcissus.ih2ome.cn:80/api
+  host: http://sso.ih2ome.cn/api
 
