--- a/server/src/main/resources/application-test.yml
+++ b/server/src/main/resources/application-test.yml
@@ -17,7 +17,7 @@ spring:
 
   ## 数据库访问配置
   datasource:
-    url: jdbc:mysql://rds03jhkvv73853nd232.mysql.rds.aliyuncs.com:3306
+    url: jdbc:mysql://rds4y3ify14fg0auc3f9o.mysql.rds.aliyuncs.com:3306
     username: xiaoshuidi
     password: xiaoshuidi
     driver-class-name: com.mysql.cj.jdbc.Driver
