--- a/server/src/main/resources/application-dev.yml
+++ b/server/src/main/resources/application-dev.yml
@@ -1,11 +1,11 @@
 server:
-  port: 80
+  port: 8080
 spring:
   ##redis配置
   profiles: dev
   redis:
     database: 0
-    host: 10.0.0.20
+    host: 10.0.0.24
     port: 6379
     password:
     pool:
@@ -14,38 +14,42 @@ spring:
       max-idle: 8
       min-idle: 0
     timeout: 0
-  
+
   ## 数据库访问配置
   datasource:
-    url: jdbc:mysql://10.0.0.20:3306
+    url: jdbc:mysql://10.0.0.20:3306?useSSL=false
     username: root
     password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
-    
+
     ## 连接池配置
     initialSize: 5
     minIdle: 5
     maxActive: 20
     # 超时时间
     maxWait: 60000
-    
+
     # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
     timeBetweenEvictionRunsMillis: 60000
     # 配置一个连接在池中最小生存的时间，单位是毫秒
     minEvictableIdleTimeMillis: 30000
-    
+
     validationQuery: SELECT 1 FROM DUAL
     testWhileIdle: true
     testOnBorrow: false
     testOnReturn: false
-    
+
     # 打开PSCache，并且指定每个连接上PSCache的大小
     poolPreparedStatements: true
     maxPoolPreparedStatementPerConnectionSize: 20
-    
-    # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙 
+
+    # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
     filters: stat,wall,log4j
     connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000;config.decrypt=true;config.decrypt.key=${publicKey}
-
-
+#短信配置
+sms:
+  baseUrl: http://localhost:5312
+#sso基础信息配置
+sso:
+  host: http://10.0.0.230:8080
