--- a/server/src/main/resources/application-test.yml
+++ b/server/src/main/resources/application-test.yml
@@ -17,7 +17,7 @@ spring:
 
   ## 数据库访问配置
   datasource:
-    url: jdbc:mysql://rds03jhkvv73853nd232.mysql.rds.aliyuncs.com:3306
+    url: jdbc:mysql://rds4y3ify14fg0auc3f9.mysql.rds.aliyuncs.com:3306
     username: xiaoshuidi
     password: xiaoshuidi
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -47,5 +47,10 @@ spring:
     # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
     filters: stat,wall,log4j
     connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000;config.decrypt=true;config.decrypt.key=${publicKey}
-
+#短信配置
+sms:
+  baseUrl: http://10.0.9.203:5312
+#基础信息配置
+sso:
+  host: http://narcissus.ih2ome.cn/sso
 
