--- a/peony/pom.xml
+++ b/peony/pom.xml
@@ -25,6 +25,11 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.ih2ome</groupId>
+			<artifactId>sunflower</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
