--- a/server/src/main/resources/application-test.yml
+++ b/server/src/main/resources/application-test.yml
@@ -53,4 +53,11 @@ sms:
 #基础信息配置
 sso:
   host: http://narcissus.ih2ome.cn/sso
-
+#云丁信息
+yd:
+  login:
+    url: https://open.dding.net/public/oauth/index.html
+  client_id: 7b7c10ebdec490d4e0d5850c
+  client_secret: b7019a28af49f61dcda9e6b4b42b4aca
+  smart_lock:
+    permission_group: apartment_mg,lock_mg,pwd_op,ble_op,gateway_mg,gateway_op
