--- a/server/src/main/resources/application-dev.yml
+++ b/server/src/main/resources/application-dev.yml
@@ -62,7 +62,7 @@ yd:
   smart_lock:
     permission_group: apartment_mg,lock_mg,pwd_op,ble_op,gateway_mg,gateway_op
     call_back:
-      url: http://narcissus.shuidiguanjia.com/api/yunDing/callBack/setOAuthCode
+      url: http://rose.shuidiguanjia.com/api/yunDing/callBack/setOAuthCode
 
 
 
