--- a/server/src/main/resources/application-prod.yml
+++ b/server/src/main/resources/application-prod.yml
@@ -61,4 +61,5 @@ yd:
   client_secret: b3a19f6ba2e99046582a9cb5de334de6
   smart_lock:
     permission_group: apartment_mg,lock_mg,pwd_op,ble_op,gateway_mg,gateway_op
-
+    call_back:
+          url: http://rose.shuidiguanjia.com/api/yunDing/callBack/setOAuthCode
