--- a/server/src/main/resources/application-prod.yml
+++ b/server/src/main/resources/application-prod.yml
@@ -5,9 +5,9 @@ spring:
   profiles: prod
   redis:
     database: 0
-    host: 2df27a68346746ba.m.cnhza.kvstore.aliyuncs.com
+    host: 10.0.0.24
     port: 6379
-    password: 2df27a68346746ba:h2omeRedis
+    password:
     pool:
       max-active: 8
       max-wait: -1
@@ -62,4 +62,5 @@ yd:
   smart_lock:
     permission_group: apartment_mg,lock_mg,pwd_op,ble_op,gateway_mg,gateway_op
     call_back:
-          url: http://rose.ih2ome.com/api/yunDing/callBack/setOAuthCode
+          url: http://rose.ih2ome.cn/api/yunDing/callBack/setOAuthCode
+
