--- a/server/src/main/resources/application-test.yml
+++ b/server/src/main/resources/application-test.yml
@@ -52,7 +52,7 @@ sms:
   baseUrl: http://10.0.9.203:5312
 #基础信息配置
 sso:
-  host: http://narcissus.ih2ome.cn/sso
+  host: http://narcissus.shuidiguanjia.com/sso
 #云丁信息
 yd:
   login:
