--- a/server/src/main/resources/application-dev.yml
+++ b/server/src/main/resources/application-dev.yml
@@ -5,7 +5,7 @@ spring:
   profiles: dev
   redis:
     database: 0
-    host: 10.0.0.24
+    host: 10.0.0.64
     port: 6379
     password:
     pool:
@@ -17,9 +17,9 @@ spring:
 
   ## 数据库访问配置
   datasource:
-    url: jdbc:mysql://10.0.0.20:3306?useSSL=false
-    username: root
-    password: 1234
+    url: jdbc:mysql://192.168.199.182:3307?useSSL=false
+    username: xiaoshuidi
+    password: xiaoshuidi
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
 
