--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,18 @@
 			<version>3.9</version>
 		</dependency>
 
+		<!--swagger-->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.7.0</version>
+		</dependency>
+
 		<!--生产配置-->
 		<!--<dependency>-->
 			<!--<groupId>org.springframework.boot</groupId>-->
